# Python-test

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  log-config.yaml  pyproject.toml
src/: main.py
src/cities/: models.py  router.py  schemas.py  service.py
src/core/: service.py
src/core/utils/: external_requests.py  logger.py
src/database/: __init__.py  database.py
src/migrations/: env.py
src/migrations/versions/: a306d843c3c2_first_migrations.py
src/picnics/: models.py  router.py  schemas.py  service.py
src/settings/: __init__.py  settings.py
src/users/: models.py  router.py  schemas.py  service.py
